Table contractor_organisation {
  contractor_organisation_id integer [pk, increment]
  name varchar(255)
  contractor_portal varchar(255)
  subcontractors text
}

Table work_class {
  work_class_id integer [pk, increment]
  code varchar(50) [not null, unique]
}

Table trade_code {
  trade_code_id integer [pk, increment]
  code varchar(100)
}

Table rate_schedule_item {
  rate_schedule_item_id integer [pk, increment]
  code varchar(100) [not null, unique]
}


Table work_priority {
  work_priority_id varchar(255) [pk]
  priority_code varchar(100)
  priority_description text
  effective_date_time timestamp
  number_of_days integer
  comments text
  required_start_date_time date
  required_completion_date_time date
}

Table work_status {
  work_status_id varchar(255) [pk]
  code varchar(100) [not null, unique]
  description text
}

Table reason_code {
  reason_code_id varchar(255) [pk]
  code varchar(100) [not null, unique]
}

Table work_order {
  work_order_id varchar(255) [pk]
  work_element_id varchar(255)
  address_id varchar(255)
  investigation_id varchar(255)
  escalation_id varchar(255)
  tenancy_id varchar(255)
  tenant_id varchar(255)
  hazard_report_id varchar(255)
  work_class_id varchar(255)
  location_alert_id varchar(255)
  work_priority_id varchar(255)
  contractor_organisation_id varchar(255)
  date_raised date
  date_reported date
  planned_start_date date
  planned_finish_date date
  actual_start_date_time timestamp
  actual_completion_date_time timestamp
  description_of_work text
  estimated_cost decimal(10,2)
  estimated_labour_hours decimal(5,2)
  location_of_repair varchar(255)
  job_status_update varchar(255)
  repair_sla_breach_flag varchar(10)

  Note: "CHECK (repair_sla_breach_flag IN ('Yes', 'No'))"
}

Table work_element {
  work_element_id varchar(50) [pk]
  work_order_id varchar(50)
  rate_schedule_item_id varchar(255)
  trade_code_id varchar(100)
  service_charge_subject varchar(255)
}

Table work_element_dependency {
  work_element_id varchar(50) [pk]
  depends_on_work_element_id varchar(50)
  type varchar(100)
  timing varchar(255)
  description text
}

Table work_order_status_history {
  work_order_status_history_id varchar(255) [pk]
  work_order_id varchar(255)
  work_status_id varchar(100)
  updated_by varchar(255)
  reason_id text
  created_date_time timestamp
  entered_date_time timestamp
  exited_date_time timestamp
  comments text
}

Table work_order_complete {
  work_order_complete_id varchar(255) [pk]
  work_order_id varchar(255)
  bill_of_material_item varchar(255)
  completed_work_elements text
  operatives_used text
  job_status_update varchar(255)
  follow_on_work varchar(255)
}

Table work_order_access_information {
  access_info_id varchar(255) [pk]
  work_order_id varchar(255)
  description varchar(100)
  key_safe text
}

// Relationships
Ref: work_order.work_class_id > work_class.work_class_id
Ref: work_order.work_priority_id > work_priority.work_priority_id
Ref: work_order.contractor_organisation_id > contractor_organisation.contractor_organisation_id
//Ref: work_order.location_alert_id > location_alert_type.location_alert_type_id
//Ref: work_order.address_id > address.address_id
//Ref: work_order.investigation_id > investigation.investigation_id
//Ref: work_order.escalation_id > escalation.escalation_id
//Ref: work_order.tenancy_id > tenancy.tenancy_id
//Ref: work_order.tenant_id > tenant_person.tenant_id
//Ref: work_order.hazard_report_id > hazard_report.hazard_report_id
Ref: work_order.work_element_id > work_element.work_element_id
Ref: work_element.work_order_id > work_order.work_order_id
Ref: work_element.rate_schedule_item_id > rate_schedule_item.rate_schedule_item_id
Ref: work_element.trade_code_id > trade_code.trade_code_id
Ref: work_element_dependency.work_element_id > work_element.work_element_id
Ref: work_element_dependency.depends_on_work_element_id > work_element.work_element_id
Ref: work_order_status_history.work_order_id > work_order.work_order_id
Ref: work_order_status_history.work_status_id > work_status.work_status_id
Ref: work_order_status_history.reason_id > reason_code.reason_code_id
Ref: work_order_complete.work_order_id > work_order.work_order_id
Ref: work_order_access_information.work_order_id > work_order.work_order_id